Remove logout button from all pages except dashboard. Remove home button from dashboard. Center home/logout button on footer.

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -48,13 +48,13 @@ footer {
   }
 
   .sign-out {
-    grid-area: 8 / 2 / 9 / 3;
-    text-align: left;
+    grid-area: 8 / 3 / 9 / 4;
+    text-align: center;
   }
 
   .home {
-    grid-area: 8 / 4 / 9 / 5;
-    text-align: right;
+    grid-area: 8 / 3 / 9 / 4;
+    text-align: center;
   }
 }
 
