--- a/app/assets/stylesheets/new-point-form.scss
+++ b/app/assets/stylesheets/new-point-form.scss
@@ -50,21 +50,21 @@
 
   .point-form-container {
     grid-area: 5 / 1 / 8 / 7;
-    font-size: 15px;
+    font-size: 12px;
     padding: 10px 0 0 0;
     margin: 0 15px 0 50px;
 
     input, textarea {
-      height: 40px;
+      height: 35px;
       width: 90%;
       margin: 0 0 5px 0;
       border-radius: 10px;
     }
 
     .address-field {
-      height: 60px;
+      height: 55px;
       padding: 10px 0 0 10px;
-      font-size: 14px;
+      font-size: 12px;
       background-color: #EDEDED;
     }
 
@@ -73,9 +73,10 @@
       font-size: 14px;
 
       .done-button, .add-point-button {
+        padding: 0;
         border-radius: 10px;
         width: 90%;
-        height: 40px;
+        height: 35px;
         background-color: #768d87;
         border-radius:10px;
         border:1px solid #566963;
@@ -107,16 +108,10 @@
       font-weight: bold;
     }
 
-    .sign-out {
-      grid-area: 1 / 1 / 2 / 2;
-      text-align: left;
-      padding: 6px 0 0 25px;
-    }
-
     .home {
-      grid-area: 1 / 5 / 2 / 6;
-      text-align: right;
-      padding: 6px 25px 0 0;
+      grid-area: 1 / 3 / 2 / 4;
+      text-align: center;
+      padding: 6px 0 0 0;
     }
   }
 }
