Change nav bar height to match other pages

--- a/app/assets/stylesheets/new-point-form.scss
+++ b/app/assets/stylesheets/new-point-form.scss
@@ -1,6 +1,6 @@
 #new-point-form {
   display: grid;
-  grid-template: 60px 1fr 1fr 1fr 1fr 1fr 1fr 40px/  1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template: 42px 1fr 1fr 1fr 1fr 1fr 1fr 40px/  100px 1fr 1fr 1fr 1fr 1fr;
   background-color: lightgrey;
 
   nav {
