--- a/app/assets/stylesheets/new-point-form.scss
+++ b/app/assets/stylesheets/new-point-form.scss
@@ -1,6 +1,6 @@
 #new-point-form {
   display: grid;
-  grid-template: 42px 1fr 1fr 1fr 1fr 1fr 1fr 40px/  100px 1fr 1fr 1fr 1fr 1fr;
+  grid-template: 42px 20px 1fr 1fr 1fr 1fr 1fr 40px/  1fr 1fr 1fr 1fr 1fr 1fr;
   background-color: lightgrey;
 
   nav {
@@ -12,40 +12,50 @@
     .username {
       padding: 10px 0 0 0;
       grid-area: 1 / 1 / 1 / 7;
-      max-height: 60px;
+      max-height: 100%;
       width: 100%;
       font-size: 15px;
     }
 
-    .flash-message {
-      grid-area: 1 / 1 / 1 / 7;
-      height: 30px;
-      width: 100%;
-      margin-top: 5px;
-      font-size: 12px;
-      font-weight: 500;
-      padding: 7px 0 0 0;
-
-
-      p {
-        margin: 0;
-        padding: 0 0 10px 0;
-      }
-    }
-
-    .flash-success {
-      background-color: #768d87;
-    }
-
-    .flash-failure {
-      background-color: #E55116;
+    p {
+      margin: 0;
+      padding: 0 0 10px 0;
     }
   }
 
+  .flash-message {
+    grid-area: 2 / 1 / 3 / 7;
+    padding: 2px 0 0 0;
+    height: 20px;
+    width: 100%;
+    font-size: 10px;
+    font-weight: 500;
+    text-align: center;
+    color: white;
+  }
+
+  .flash-success {
+    background-color: #768d87;
+  }
+
+  .flash-failure {
+    background-color: #E55116;
+  }
+
+
   #map {
-    grid-area: 2 / 1 / 5 / 7;
+    grid-area: 3 / 1 / 5 / 7;
     margin: 10px 10px 0 10px;
     border: 1px solid darkgrey;
+
+    .geocoder-icon, .geocoder-icon-search {
+      margin: 0 0 10px 0;
+    }
+
+    input {
+      padding: 5px 0 0 40px;
+      height: 35px
+    }
   }
 
   .point-form-container {
@@ -61,8 +71,9 @@
       border-radius: 10px;
     }
 
+
     .address-field {
-      height: 55px;
+      height: 65px;
       padding: 10px 0 0 10px;
       font-size: 12px;
       background-color: #EDEDED;
@@ -84,6 +95,7 @@
         color:#ffffff;
         text-align: center;
         font-weight: bold;
+        outline: none;
       }
 
       .done-button {
