--- a/app/assets/stylesheets/user-scavenger-hunt.scss
+++ b/app/assets/stylesheets/user-scavenger-hunt.scss
@@ -77,6 +77,10 @@
       padding: 0px 0 0 0;
       width: 100%;
     }
+
+    .form-button {
+      outline: none;
+    }
   }
 
   .points-container {
