--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -19,6 +19,22 @@
 
   footer {
     grid-area: 8 / 1 / 8 / 7;
+    grid-template: 60px 1fr / 75px 1fr 1fr 1fr 75px;
+
+    .sign-out {
+      grid-area: 1 / 3 / 2 / 4;
+      text-align: center;
+    }
+
+    .sign-out-text {
+      grid-area: 2 / 3 / 3 / 4;
+      text-align: center;
+      font-size: 20px;
+      color: white;
+      font-weight: 500px;
+      padding: 0 0 2px 0;
+    }
+
   }
 
   .form-button {
