Add flash message div to index. Update user_scavenger_hunts.js to clear flash messages appended by Rails. Update flash message styling

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -18,6 +18,11 @@
     font-weight: 500;
     text-align: center;
     color: white;
+
+    .flash-success {
+      font-size: 25px;
+      background-color: #768d87;
+    }
   }
 
   .flash-success {
