--- a/app/views/user_scavenger_hunts/index.html.erb
+++ b/app/views/user_scavenger_hunts/index.html.erb
@@ -4,7 +4,13 @@
        <%= "#{@username}'s Scavenger Hunts" %>
      </div>
   </nav>
-  <div class="flash-message"></div>
+  <div class="flash-message">
+    <% flash.each do |key, value| %>
+      <div class="flash-<%= key %>">
+        <%= value %>
+      </div>
+    <% end %>
+  </div>
   <div class='cards-container'>
     <% @scavenger_hunts.each do |hunt| %>
     <ul class='scavenger-hunt-card'>
