--- a/app/assets/stylesheets/user-scavenger-hunt.scss
+++ b/app/assets/stylesheets/user-scavenger-hunt.scss
@@ -1,6 +1,6 @@
 #user-scavenger-hunt {
   display: grid;
-  grid-template: 100px 1fr 1fr 1fr 1fr 1fr 1fr 10px 100px /  1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template: 100px 50px 1fr 1fr 1fr 1fr 1fr 1fr 10px 100px /  1fr 1fr 1fr 1fr 1fr 1fr;
 
   nav {
     grid-area: 1 / 1 / 2 / 7;
@@ -14,7 +14,7 @@
     grid-area: 2 / 1 / 3 / 7;
     height: 100%;
     width: 100%;
-    font-size: 13px;
+    font-size: 25px;
     padding: 0 0 6px 0;
     text-align: center;
     color: white;
@@ -26,7 +26,7 @@
   }
 
   .scavenger-hunt-information {
-    grid-area: 2 / 2 / 4 / 6;
+    grid-area: 3 / 2 / 5 / 6;
     padding: 75px 0 0 0;
 
     .scavenger-hunt-description {
@@ -62,7 +62,7 @@
   }
 
   .add-points {
-    grid-area: 4 / 2 / 7 / 6 ;
+    grid-area: 5 / 2 / 8 / 6 ;
 
     h3 {
       font-size: 35px;
@@ -84,7 +84,7 @@
   }
 
   .points-container {
-    grid-area: 5 / 2 / 10 / 6;
+    grid-area: 6 / 2 / 10 / 6;
     margin: 25px 0 0 0;
     display: flex;
     flex-direction: column;
@@ -129,6 +129,6 @@
 
 
   footer {
-    grid-area: 9 / 1 / 10 / 7;
+    grid-area: 10 / 1 / 11 / 7;
   }
 }
