--- a/app/views/user_scavenger_hunts/show.html.erb
+++ b/app/views/user_scavenger_hunts/show.html.erb
@@ -4,13 +4,7 @@
        <%= "#{@scavenger_hunt.name}" %>
      </div>
   </nav>
-  <div class="flash-message">
-    <% flash.each do |key, value| %>
-      <div class="flash-<%= key %>">
-        <%= value %>
-      </div>
-    <% end %>
-  </div>
+  <div class="flash-message"></div>
   <div class="scavenger-hunt-information">
     <div class="scavenger-hunt-description">
       <span><b>Description:</b><br/> <%= @scavenger_hunt.description %></span>
